src/App.css
/* ... */
.edit-description {
  width: 50vh;
  font-size: 15px;
  background: #b6d4e1;
  border-radius: 7px;
  height: 4vh;
}
.edit-title {
  width: 50vh;
  font-size: 15px;
  background: #b6d4e1;
  border-radius: 7px;
  height: 4vh;
}

.edit-content {
  width: 50vh;
  height: auto;
  min-height: 30vh;
  font-size: 15px;
  background: #b6d4e1;
  border-radius: 7px;
  height: 4vh;
}
.submitNote {
  width: 25vh;
  margin-left: 13vh;
  font-size: 15px;
  background: black;
  font-weight: bold;
  color: white;
  border-radius: 7px;
  height: 4vh;
}
.submitNote:hover {
  box-shadow: 0 0 4px 4px white;
}
.submitEditNote {
  width: 25vh;
  margin-left: 3vh;
  font-size: 15px;
  background: black;
  font-weight: bold;
  color: #efefef;
  border-radius: 7px;
  height: 4vh;
}
.submitEditNote:hover {
  box-shadow: 0 0 4px 4px white;
  color: white;
  background: #262222;
}
/*
login */
html {
  height: 100%;
  width: 100%;
  margin: 0px;
  padding: 0px;
}

#root {
  height: 100%;
  width: 100%;
}
body {
  width: 100%;
  margin: 0px;
  padding: 0px;
  height: 100%;
  /* max-height: 850px;
  max-width: 850px; */
  background-repeat: no-repeat;
  font-family: Poppins-Regular, sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #212529;
  overflow-y: auto;
}
.App {
  width: 100%;
  height: 100%;
}
.login-parent {
  height: 100%;
  width: 100%;
  overflow-y: hidden;
}
.login-container {
  min-height: 100vh;
  min-width: 70em;
  position: absolute;
  /* background-image: url("https://images.unsplash.com/photo-1533103601126-a65ecc2cfc39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80"); */
  background: url("https://images.unsplash.com/photo-1533103601126-a65ecc2cfc39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80")
    /* no-repeat left left fixed; */;
  -webkit-background-size: cover;
  background-repeat: no-repeat;
  -moz-background-size: cover;
  background-size: cover;
  background-position: left left fixed;
}
.login-div {
  height: 100%;
  min-width: 25%;
  background-color: #f7f7f7;
  padding: 173px 55px 55px;
  position: relative;
  margin-left: 62em;
  border: 1px solid black;
  background: #2575fc;
}
.login-title {
  text-align: center;
  overflow: auto;
}
.login-form {
  justify-content: center;
  text-align: center;
  border-radius: 5px;
}

#sign-in {
  text-align: center;
  border-radius: 3px;
}
.email {
  text-align: center;
  border-radius: 5px;
  width: 13em;
  font-size: 19px;
  height: 2.2em;
}
.password {
  text-align: center;
  border-radius: 5px;
  width: 13em;
  font-size: 19px;
  height: 2.2em;
}
.signup-button {
  align-items: center;
  border-radius: 3px;
  width: 7.5em;
  height: 1.8em;
  font-size: 15px;
  font-weight: bold;
  margin-top: 1em;
  margin-left: 0.5em;
  text-align: center;
  background-color: #c5b8d6;
}
.signup-button:hover {
  background-color: #d7c4ef;
  box-shadow: 0 0 1px 1px white;
}

.signup-password {
  text-align: center;
}
#sign-in {
  width: 7.5em;
  height: 1.8em;
  font-size: 15px;
  font-weight: bold;
  background-color: #75c8b9;
  border: none;
}
#sign-in:hover {
  background: #7cddcb;
  box-shadow: 0 0 1px 1px white;
}
.signup-form {
  text-align: center;
  border-radius: 5px;
}

/* translateText */
.translateDiv {
  min-height: 150vh;
  min-width: 200vh;
  margin-top: 0;
  top: 0%;
  background-size: cover;
  overflow: auto;
  background-repeat: no-repeat;
  box-sizing: border-box;
  background-image: url("https://images.unsplash.com/photo-1530379768560-fac46435511d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
}
.translated {
  margin-left: 80vh;
  margin-top: 5vh;
  min-height: auto;
  box-shadow: 0 0 3px 3px white;
  width: 40vh;
  border-radius: 9px;
  background: #638bac;
}
.select-translate {
  margin-left: 80vh;
  margin-top: 40vh;
  width: 40vh;
  color: black;
  font-weight: bold;
}
.back {
  height: 4vh;
  width: 25vh;
  border-radius: 3px;
  font-family: Poppins-Regular, sans-serif;
  font-weight: bold;
  font-size: 13px;
  color: #e2e2e2;
  background: black;
  border: none;
  margin-left: 0.15%;
}
.back:hover {
  color: white;
  background: #141b21;
}
.submit-translation {
  width: 20vh;
  font-size: 15px;
  background: black;
  font-weight: bold;
  color: white;
  border-radius: 7px;
  height: 4vh;
  margin-left: 90vh;
}
.submit-translation:hover {
  box-shadow: 0 0 3px 3px white;
}

